fix: waybar tray spacing

--- a/dot_config/waybar/style.css
+++ b/dot_config/waybar/style.css
@@ -175,18 +175,12 @@ tooltip label{
 #bluetooth, #pulseaudio, #network, #battery, #tray {
   color: #ebebeb;
   font-size: 1.25rem;
-  margin: 10px 0;
-  padding: 0.5rem;
-  border-radius: 4px;
+  padding: 0.75rem;
   transition: all 0.25s;
 }
 
 #bluetooth:hover, #pulseaudio:hover, #network:hover, #battery:hover, #tray:hover {
   color: white;
-  font-size: 1.25rem;
-  margin: 10px 0;
-  padding: 0.5rem;
-  border-radius: 4px;
 }
 
 #battery.warning {
